fix: content alignment on gutenberg cover block [closes #926]

--- a/style.css
+++ b/style.css
@@ -1642,7 +1642,6 @@ article {
 }
 
 .wp-block-cover-image .wp-block-cover__inner-container, .wp-block-cover .wp-block-cover__inner-container {
-  width: auto;
   max-width: calc(100% - 70px);
 }
 
